# AppSimpleLog

./: .clang-format  AppSimpleLog.code-workspace  BUILD_INSTRUCTIONS.md  BUILD_SUMMARY.md  BUILD_TEST_LOG.md  BUILD_VALIDATION.md  CMakeLists.txt  EXECUTION_STATUS.md  GTEST_SETUP.md  LIBZIP_CONFIG.md  LIBZIP_INTEGRATION.md  LIBZIP_SETUP.md  LIBZIP_SUMMARY.md  MANUAL_BUILD_GUIDE.md  MANUAL_BUILD_REQUIRED.md  MOCK_BUILD_REPORT.md  NAMESPACE_REMOVAL.md  NAMESPACE_SUMMARY.md  P1_MVP_STATUS.md  README.md  README_BUILD.md  README_SETUP.md  README_thirdproj_instructions.md  RUN_BUILD_LOG.md  UNIT_TEST_GUIDE.md  build.bat  build.sh  build_debug.bat  configure_vs2026.bat  download_gtest.bat  download_libzip_into_thirdproj.bat  remove_namespace.bat  run_unit_tests.bat  setup_gtest.bat  setup_gtest_simple.bat  technical-specification.md  test_cmake.txt  test_thread_id.cpp  update_cmake_for_gtest.bat  vs_build.bat
.specify/memory/: constitution.md
absolute/path/to/: file
cbridge/: speckit_logger.cpp  speckit_logger.h
specs/001-async-logging-module/: TECHNICAL_DESIGN.html  TECHNICAL_DESIGN.md  plan.md  spec.md  tasks.md
specs/001-async-logging-module/checklists/: requirements.md
specs/1-log-viewer/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/1-log-viewer/checklists/: requirements.md
specs/1-log-viewer/contracts/: ILogModel.h  IPresenter.h  IView.h
src/include/speckit/log/: archive.h  async_logger.h  async_queue.h  crash_handler.h  features.h  file_manager.h  log_buffer.h  log_entry.h  log_level.h  platform.h  tag_filter.h
src/src/: archive.cpp  async_logger.cpp  async_queue.cpp  crash_handler.cpp  file_manager.cpp  log_buffer.cpp  log_entry.cpp  tag_filter.cpp
tests/integration/: test_async_logging.cpp  test_multi_process.cpp
tests/performance/: test_latency.cpp  test_throughput.cpp
tests/unit/: test_archive.cpp  test_async_logging.cpp  test_async_queue.cpp  test_file_manager.cpp  test_log_entry.cpp  test_process_isolation.cpp
